<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBECEB"
    android:orientation="vertical"
    tools:context=".sanpham.SanPhamActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#002447"
        android:gravity="center"
        android:paddingTop="10pt"
        android:text="@string/ttsanpham"
        android:textColor="#CCCCCC"
        android:textSize="30dp"
        android:textStyle="bold|italic" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:columnCount="2"
        android:rowCount="5">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/id"
            android:textColor="#000000"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/masanpham"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:textColor="#000000"
            android:textSize="25dp" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/name"
            android:textColor="#000000"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/tensanpham"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:textColor="#000000"
            android:textSize="25dp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/tl"
            android:textColor="#000000"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/loaisanpham"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:textColor="#000000"
            android:textSize="25dp" />


        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/gia"
            android:textColor="#000000"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/gia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:textColor="#000000"
            android:textSize="25dp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/nph"
            android:textColor="#000000"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/ngayphathanh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:textColor="#000000"
            android:textSize="25dp" />
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/them"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:backgroundTint="#002447"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="#CCCCCC"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/sua"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:backgroundTint="#002447"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="#CCCCCC"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/xoa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:backgroundTint="#002447"
            android:text="@string/del"
            android:textAllCaps="false"
            android:textColor="#CCCCCC"
            android:textStyle="bold|italic" />
    </LinearLayout>
</LinearLayout>