<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#FBECEB"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#002447"
        android:paddingTop="10pt"
        android:text="@string/qlgame"
        android:textAlignment="center"
        android:textColor="#CCCCCC"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/passwrd"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnDangNhap"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="#002447"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#CCCCCC"
        android:textStyle="bold|italic" />

</LinearLayout>